--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![BrightCoders Logo](img/logo-bc.png)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
